@@ -1,0 +1,1 @@
+build/scripts/myrunuo.dll{,.mdb} usr/share/sunuo/lib
