@@ -1,0 +1,36 @@
+/*
+ * SunUO
+ * $Id$
+ *
+ * (c) 2005-2006 Max Kellermann <max@duempel.org>
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; version 2 of the License.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ *
+ */
+
+namespace Server.Engines.MyRunUO
+{
+	public delegate void QueueMobileUpdate(Mobile m);
+
+	public class Stub
+	{
+		public static event QueueMobileUpdate m_QueueMobileUpdate;
+
+		public static void QueueMobileUpdate(Mobile m)
+		{
+			if (m_QueueMobileUpdate != null)
+				m_QueueMobileUpdate(m);
+		}
+	}
+}
